Front-End Fixes (#14)
* allows other devices in LAN to access website

* fixed nav bar overlapping contact heading on home page

* did not need this script

* added close button for flash notices

* Fixes GitHub issue 8: clicking header logo ruins smooth scrolling

* added jQuery-rific effect to closing flash notice

* jQuery is a part of Rails; no need for marking overoptimization as a todo

* moved close icon to CSS

--- a/app/assets/stylesheets/components/_flash.sass
+++ b/app/assets/stylesheets/components/_flash.sass
@@ -17,3 +17,10 @@
       &:focus,
       &:hover
         color: shade($color, 90%)
+
+    .close-flash
+      margin-left: 0.5em
+      cursor: pointer
+
+      &:before
+        +close
