--- a/app/assets/stylesheets/pages/homepage.sass
+++ b/app/assets/stylesheets/pages/homepage.sass
@@ -11,6 +11,7 @@
 
     header
       position: fixed
+      left: 0
       width: 100%
       background-color: rgba($gray, 0.3)
       z-index: 1
@@ -195,7 +196,9 @@
     #contact
       background-color: $lightest-gray
       width: 100%
-      padding: $large-space
+      padding-left: $large-space
+      padding-right: $large-space
+      padding-bottom: $large-space
 
       textarea
         height: 15vh
